Move all project_cfp_patterns under /<round_slug>/
So we don't have to guess which round the mentor or coordinator is
trying to manage.

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -210,7 +210,7 @@ Past community participation in Outreachy
 				<button class="btn btn-success dropdown-toggle" type="button" id="CoMentorMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select project to co-mentor</button>
 				<div class="dropdown-menu" aria-labelledby="CoMentorMenu">
 					{% for project in approved_projects %}
-						<button class="dropdown-item" formaction="{% url 'mentorapproval-action' community_slug=community.slug project_slug=project.slug action='submit' %}">{{ project.short_title }}</button>
+						<button class="dropdown-item" formaction="{% url 'mentorapproval-action' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug action='submit' %}">{{ project.short_title }}</button>
 					{% endfor %}
 				</div>
 			</div>
