--- a/home/templates/home/snippet/mentor_action.html
+++ b/home/templates/home/snippet/mentor_action.html
@@ -38,7 +38,7 @@
 			Application deadline: {{ project.application_deadline }} 4pm UTC
 			</p>
 			<p class="card-text">
-			<a class="btn btn-primary" href="{% url 'project-action' community_slug=project.project_round.community.slug project_slug=project.slug action='submit' %}#project-deadline">Update Application Deadline</a>
+			<a class="btn btn-primary" href="{{ project.get_submit_url }}#project-deadline">Update Application Deadline</a>
 			</p>
 		{% elif project.approval_status == project.PENDING %}
 			<p class="card-text">This project is pending.
@@ -48,7 +48,7 @@
 				</p>
 		{% endif %}
 		<p class="card-text">
-		<a class="btn btn-primary" href="{% url 'project-action' community_slug=project.project_round.community.slug project_slug=project.slug action='submit' %}">Update Project Details</a>
+		<a class="btn btn-primary" href="{{ project.get_submit_url }}">Update Project Details</a>
 		</p>
 		<p class="card-text">
 		<a class="btn btn-primary" href="{% url 'project-skills-edit' round_slug=project.project_round.participating_round.slug community_slug=project.project_round.community.slug project_slug=project.slug %}">Update Project Skills</a>
@@ -57,7 +57,7 @@
 		<a class="btn btn-primary" href="{% url 'communication-channels-edit' round_slug=project.project_round.participating_round.slug community_slug=project.project_round.community.slug project_slug=project.slug %}">Update Communication Channels</a>
 		</p>
 		<p class="card-text">
-		<a class="btn btn-warning" href="{% url 'project-action' community_slug=project.project_round.community.slug project_slug=project.slug action='withdraw' %}">Withdraw Project</a>
+		<a class="btn btn-warning" href="{{ project.get_withdraw_url }}">Withdraw Project</a>
 		<hr>
 		<p class="card-text">You can <a href="{% url 'community-read-only' community_slug=project.project_round.community.slug %}">submit another project</a>
 			or <a href="{% url 'community-read-only' community_slug=project.project_round.community.slug %}">co-mentor another project</a>
