Remove unreachable branches from community_landing.html
"approved_to_see_all_project_details or mentors_pending_projects" is
tested in an elif branch for "not approved_to_see_all_project_details
and not mentors_pending_projects", which means it runs when "not a and
not a", which can be reduced to a straight {% else %}.

The elif branches after that were unreachable, which is good, because
they test variables that this view does not set in the context for this
template.

--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -32,7 +32,7 @@ Outreachy internships working with {{ community.name }}
 			Your initial application is currently pending review by Outreachy organizers.
 			</p>
 		{% endif %}
-	{% elif approved_to_see_all_project_details or mentors_pending_projects %}
+	{% else %}{# allowed to see project details #}
 
 		{% if not current_round.has_application_period_started %}
 			{% include "home/snippet/round_not_open.html" %}
@@ -213,10 +213,6 @@ Outreachy internships working with {{ community.name }}
 				{% endif %}
 			{% endfor %}
 		{% endif %}
-	{% elif is_pending_coordinator %}
-		<p>Your request to coordinate this community is under review.</p>
-	{% elif is_pending_mentor %}
-		<p>Your request to mentor for this community is under review.</p>
 	{% endif %}
 {% endwith %}
 
