Add Comrade.approved_volunteer helper
All but one use of approved_mentor_or_coordinator also checked
approved_reviewer, so all those cases are simplified by checking a
single broader condition.

The remaining case was just determining whether to display an
eligibility prompt, and encouraging an application reviewer to put in
their own application, um, doesn't make sense. So it should have
included this check too.

I'm calling the broader class of people "volunteers" even though some of
them may be acting in capacities which they're paid for, because Sage
and I can't come up with a better simple term for this.

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -210,7 +210,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, funded_interns, projects in late_projects %}
 		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
-		{% if application.is_approved or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
+		{% if application.is_approved or request.user.comrade.approved_volunteer %}
 			{% if not current_round.has_late_application_deadline_passed %}
 				<p>Learn how to make a contribution to these internship projects on the
 			{% else %}
@@ -239,7 +239,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, funded_interns, projects in ontime_projects %}
 		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
-		{% if request.user.comrade.approved_reviewer or application.is_approved or request.user.comrade.approved_mentor_or_coordinator %}
+		{% if application.is_approved or request.user.comrade.approved_volunteer %}
 			{% if not current_round.has_ontime_application_deadline_passed %}
 				<p>Learn how to make a contribution to these internship projects on the
 			{% else %}
@@ -294,7 +294,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, projects in closed_projects %}
 		<h3>{{ community.name }}</h3>
 		<p>{{ community.description }}</p>
-		{% if application.is_approved or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
+		{% if application.is_approved or request.user.comrade.approved_volunteer %}
 			<p>Document your contributions to these internship projects on the
 			<a href="{% url 'community-landing' round_slug=current_round.slug community_slug=community.slug %}">{{ community.name }} community landing page</a>.</p>
 		{% endif %}
