--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -161,7 +161,7 @@ Outreachy internships working with {{ community.name }}
 							<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 						{% endif %}
 					{% endif %}
-					{% if application.is_approved or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
+					{% if application.is_approved or request.user.comrade.approved_volunteer %}
 							<div class="card">
 								<div class="card-header">
 									<h4 class="mb-0">Detailed Project Information</h4>
@@ -194,7 +194,7 @@ Outreachy internships working with {{ community.name }}
 						<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 					{% endif %}
 				{% endif %}
-				{% if application.is_approved or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
+				{% if application.is_approved or request.user.comrade.approved_volunteer %}
 					<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
 						<div class="card">
 							<div class="card-header" role="tab" id="project-closed-heading-{{ forloop.counter }}">
