Don't call approved_reviewer from applicant review templates
The view already has to check whether the current visitor has an
ApplicationReviewer object, so just pass that already-computed fact into
the templates.

Now this view should use the same round for everything, hooray!

--- a/home/templates/home/snippet/applicant_review_actions.html
+++ b/home/templates/home/snippet/applicant_review_actions.html
@@ -25,7 +25,7 @@
 		</td>
 	</table>
 {% endif %}
-{% if user.comrade.approved_reviewer %}
+{% if can_review %}
 	<h2>Initial Application Review Owner</h2>
 	{% if application.review_owner %}
 		<p>Owner for this application: {{ application.review_owner.comrade.public_name }}.</p>
