--- a/home/templates/home/snippet/applicant_review_time_commitments.html
+++ b/home/templates/home/snippet/applicant_review_time_commitments.html
@@ -1,4 +1,4 @@
-{% if user.comrade.approved_reviewer %}
+{% if can_review %}
 		<div class="card border mt-3" id="essay-rating">
 			<div class="card-header bg-info text-white">Review Time Commitments</div>
 			<div class="card-body">
