--- a/home/templates/home/snippet/applicant_review_essay_rating.html
+++ b/home/templates/home/snippet/applicant_review_essay_rating.html
@@ -1,4 +1,4 @@
-{% if user.comrade.approved_reviewer %}
+{% if can_review %}
 	<div class="card border mt-3" id="essay-rating">
 		<div class="card-header bg-info text-white">Review Essay Answers</div>
 		<div class="card-body">
