Remove mostly unused summary function.
Test for the presence of the feedback object, rather than returning a
bogus string. I had intended to have the summary return something more
useful (like summarized statistics) but it turns out it's not needed at
this time.

--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -58,7 +58,7 @@
 		{% endif %}
 		<p>Submitted feedback:</p>
 		<ul>
-			{% if internship.initialinternfeedback.summary %}
+			{% if internship.initialinternfeedback %}
 				<li>Your initial feedback was submitted.</li>
 			{% endif %}
 			{% if internship.initialmentorfeedback %}
