Put coordinator_reminder_prompt.html back
This partially reverts e1078040ced507280d7aa4315367563b52662ba4, in
which I was over-zealous about deleting templates I thought were unused.

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -13,6 +13,8 @@
 {% elif request.user.comrade.eligible_application and request.user.comrade.get_projects_contributed_to %}
 {% include "home/snippet/apply_prompt.html" %}
 {% endif %}
-{% if request.user.comrade.get_approved_coordinator_communities %}
+{% with communities=request.user.comrade.get_approved_coordinator_communities %}
+{% if communities %}
 {% include "home/snippet/coordinator_reminder_prompt.html" %}
 {% endif %}
+{% endwith %}
