--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -6,7 +6,7 @@ Outreachy internships working with {{ community.name }}
 
 {% block content %}
 
-{% with contributions=application.get_projects_contributed_to %}
+{% with contributions=role.application.get_projects_contributed_to %}
 
 	{% comment %}This will always show past rounds, since the application period will always be passed.{% endcomment %}
 	{% if not approved_to_see_all_project_details and not mentors_pending_projects %}
@@ -17,17 +17,17 @@ Outreachy internships working with {{ community.name }}
 		Outreachy application period starts on {{ current_round.appsopen }} at 4pm UTC.
 		You can sign up for an email notification when the round opens by
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">subscribing to the Outreachy announcements mailing list</a>.</p>
-	{% elif not application.is_approved and not mentors_pending_projects and not approved_coordinator and not user.comrade.approved_reviewer %}
+	{% elif not role.application.is_approved and not mentors_pending_projects and not approved_coordinator and not role.is_reviewer %}
 		{% if not user.comrade %}
 			You may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a> to see this information.</p>
-		{% elif user.comrade.needs_application %}
+		{% elif role.needs_application %}
 			<p>This information is only available to applicants who have their initial application approved.
 			Please <a href="{% url 'eligibility' %}">fill out an initial application</a>.</p>
-		{% elif application.is_rejected %}
+		{% elif role.application.is_rejected %}
 			<p>This information is only available to applicants who have their initial application approved.
 			Unfortunately, your initial application is not approved.
 			</p>
-		{% elif application.is_pending %}
+		{% elif role.application.is_pending %}
 			<p>This information is only available to applicants who have their initial application approved.
 			Your initial application is currently pending review by Outreachy organizers.
 			</p>
@@ -58,9 +58,9 @@ Outreachy internships working with {{ community.name }}
 		{% endif %}
 
 		<p><a href="/apply/">Why apply to Outreachy?</a> &gt;
-		{% if not request.user.comrade or request.user.comrade.needs_application %}
+		{% if role.needs_application %}
 			<a href="{% url 'eligibility' %}">Start your initial application</a>
-		{% elif application.is_rejected or application.is_pending %}
+		{% elif role.needs_review %}
 			<a href="{% url 'eligibility-results' %}">Review your initial application</a>
 		{% else %}
 			<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
@@ -154,14 +154,14 @@ Outreachy internships working with {{ community.name }}
 						{% include 'home/snippet/mentor_action.html' %}
 					{% endif %}
 					{% include "home/snippet/project_deadline.html" %}
-					{% if application.is_approved %}
+					{% if role.application.is_approved %}
 						{% if project in contributions %}
 							<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Update Contibutions and Apply to This Project</a></p>
 						{% else %}
 							<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 						{% endif %}
 					{% endif %}
-					{% if application.is_approved or request.user.comrade.approved_volunteer %}
+					{% if role.application.is_approved or role.is_volunteer %}
 							<div class="card">
 								<div class="card-header">
 									<h4 class="mb-0">Detailed Project Information</h4>
@@ -187,14 +187,14 @@ Outreachy internships working with {{ community.name }}
 				<hr id="{{ project.slug }}">
 				<h2>{{ project.short_title }}</h2>
 				{% include "home/snippet/project_deadline.html" %}
-				{% if application.is_approved %}
+				{% if role.application.is_approved %}
 					{% if project in contributions %}
 						<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Update Contibutions and Apply to This Project</a></p>
 					{% else %}
 						<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 					{% endif %}
 				{% endif %}
-				{% if application.is_approved or request.user.comrade.approved_volunteer %}
+				{% if role.application.is_approved or role.is_volunteer %}
 					<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
 						<div class="card">
 							<div class="card-header" role="tab" id="project-closed-heading-{{ forloop.counter }}">
