--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -17,9 +17,9 @@ Outreachy Internships | Apply | Pick a Project
 	{% endif %}
 
 <p><a href="/apply/">Why apply to Outreachy?</a> &gt;
-{% if current_round and not request.user.comrade or request.user.comrade.needs_application %}
+{% if role.needs_application %}
 	<a href="{% url 'eligibility' %}">Start your initial application</a>
-{% elif current_round and application.is_rejected or application.is_pending %}
+{% elif role.needs_review %}
 	<a href="{% url 'eligibility-results' %}">Review your initial application</a>
 {% else %}
 	<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
@@ -75,7 +75,7 @@ Outreachy Internships | Apply | Pick a Project
 	<p>The list of Outreachy projects for the {{ current_round.official_name }} will be available to applicants on {{ current_round.appsopen }}.</p>
 {% endif %}
 
-{% if application.is_approved %}
+{% if role.application.is_approved %}
 	{% if not current_round.has_application_deadline_passed %}
 		<h2>Finding a Mentor and an Internship Project</h2>
 		<p><img src="{% static 'bot-find-a-mentor.png' %}"></p>
@@ -210,7 +210,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, funded_interns, projects in late_projects %}
 		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
-		{% if application.is_approved or request.user.comrade.approved_volunteer %}
+		{% if role.application.is_approved or role.is_volunteer %}
 			{% if not current_round.has_late_application_deadline_passed %}
 				<p>Learn how to make a contribution to these internship projects on the
 			{% else %}
@@ -239,7 +239,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, funded_interns, projects in ontime_projects %}
 		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
-		{% if application.is_approved or request.user.comrade.approved_volunteer %}
+		{% if role.application.is_approved or role.is_volunteer %}
 			{% if not current_round.has_ontime_application_deadline_passed %}
 				<p>Learn how to make a contribution to these internship projects on the
 			{% else %}
@@ -294,7 +294,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% for community, projects in closed_projects %}
 		<h3>{{ community.name }}</h3>
 		<p>{{ community.description }}</p>
-		{% if application.is_approved or request.user.comrade.approved_volunteer %}
+		{% if role.application.is_approved or role.is_volunteer %}
 			<p>Document your contributions to these internship projects on the
 			<a href="{% url 'community-landing' round_slug=current_round.slug community_slug=community.slug %}">{{ community.name }} community landing page</a>.</p>
 		{% endif %}
