--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -17,7 +17,7 @@
 	{% endif %}
 	{% endwith %}
 {% endif %}
-{% with communities=request.user.comrade.get_approved_coordinator_communities %}
+{% with communities=role.approved_coordinator_communities %}
 {% if communities %}
 {% include "home/snippet/coordinator_reminder_prompt.html" %}
 {% endif %}
