--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -26,24 +26,10 @@ Initial Feedback for current_round.official_name
 				</thread>
 				<tr>
 					<td>
-						{% if initial_mentor_status == i.MISSING %}
-						<button class="btn btn-secondary">missing</button>
-						{% elif initial_mentor_status == i.PAY %}
-						<button class="btn btn-success">pay</button>
-						{% elif initial_mentor_status == i.EXTEND %}
-						<button class="btn btn-warning">extend</button> to {{ i.initialmentorfeedback.extension_date|date:"M d, Y" }}
-						{% elif initial_mentor_status == i.TERMINATE %}
-						<button class="btn btn-danger">terminate</button>
-						{% elif initial_mentor_status == i.SUBMITTED %}
-						<button class="btn btn-secondary">submitted</button>
-						{% endif %}
+						{% include 'home/snippet/mentor-feedback-status.html' with intern=i mentor_status=initial_mentor_status extension_date=i.initialmentorfeedback.extension_date %}
 					</td>
 					<td>
-						{% if initial_intern_status == i.MISSING %}
-						<button class="btn btn-secondary">missing</button>
-						{% elif initial_intern_status == i.SUBMITTED %}
-						<button class="btn btn-success">submitted</button>
-						{% endif %}
+						{% include 'home/snippet/intern-feedback-status.html' with intern=i intern_status=initial_intern_status %}
 					</td>
 					<td>Feedback status</td>
 				</tr>
