--- a/home/templates/home/snippet/intern-feedback-status.html
+++ b/home/templates/home/snippet/intern-feedback-status.html
@@ -1,4 +1,4 @@
-{% if intern_status == intern.MISSING %}
+{% if not intern_status or intern_status == intern.MISSING %}
 <button class="btn btn-secondary">missing</button>
 {% elif intern_status == intern.SUBMITTED %}
 <button class="btn btn-success">submitted</button>
