Fix more URL parameters for community-landing

--- a/home/templates/home/dashboard/coordinator_reminder.html
+++ b/home/templates/home/dashboard/coordinator_reminder.html
@@ -1,1 +1,1 @@
-{% include "home/snippet/coordinator_reminder_prompt.html" with communities=section %}
+{% include "home/snippet/coordinator_reminder_prompt.html" with current_round=section.current_round communities=section.communities %}
