--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <p><a href="{% url 'community-cfp' %}">Timeline and FAQ for Outreachy Communities</a> &gt;
-<a href="{% url 'community-landing' round_slug=project.project.round.slug community_slug=project.community.slug %}">{{ project.project_round.community.name }}</a> &gt;
+<a href="{% url 'community-landing' round_slug=project.project_round.participating_round.slug community_slug=project.project_round.community.slug %}">{{ project.project_round.community.name }}</a> &gt;
 {{ view.kwargs.action|title }} a Project
 </p>
 
